# cpp-backend-template-practicum-november

./: .gitignore
sprint1/problems/async_server/solution/: CMakeLists.txt
sprint1/problems/cafeteria/solution/: CMakeLists.txt
sprint1/problems/final_task/solution/: CMakeLists.txt
sprint1/problems/map_json/solution/: CMakeLists.txt
sprint1/problems/map_json/solution/src/: http_server.h
sprint1/problems/restaurant_single_threaded/solution/: CMakeLists.txt
sprint1/problems/sum/solution/: CMakeLists.txt  conanfile.txt
sprint1/problems/sync_server/solution/: CMakeLists.txt
sprint2/problems/command_line/solution/: CMakeLists.txt
sprint2/problems/command_line/solution/src/: args.h  auth_handler.h  constants.h  direction.h  endpoints.h  game_handler.h  http_server.cpp  http_server.h  main.cpp  point.h  position_generator.h  request_handler.cpp  request_handler.h  speed.h
sprint2/problems/game_state/solution/: CMakeLists.txt
sprint2/problems/game_state/solution/src/: constants.h  direction.h  dog.h  dogs.h  game_handler.h  http_server.h  json_loader.h  main.cpp  player.h  player_tokens.h  players.h  point.h  position_generator.h  request_handler.h  speed.h
sprint2/problems/join_game/solution/: CMakeLists.txt
sprint2/problems/join_game/solution/src/: game_handler.h  logging_handler.h  main.cpp  player.h  players.h  tagged.h
sprint2/problems/logger/precode/src/: logger.h  main.cpp
sprint2/problems/logger/solution/: CMakeLists.txt
sprint2/problems/move_players/solution/: CMakeLists.txt
sprint2/problems/move_players/solution/src/: dog.h  dogs.h  game_handler.h  main.cpp  point.h  position_generator.h
sprint2/problems/server_logging/solution/: CMakeLists.txt
sprint2/problems/server_logging/solution/src/: json_loader.cpp  logger.h  main.cpp  model.cpp  model.h  request_handler.cpp
sprint2/problems/static_content/solution/: CMakeLists.txt
sprint2/problems/time_control/solution/: CMakeLists.txt
sprint2/problems/time_control/solution/src/: game_handler.h  main.cpp  position_generator.h
sprint3/gather-tests/solution/: CMakeLists.txt
sprint3/gather-tests/solution/src/: collision-detector.cpp  collision-detector.h  geom.h
sprint3/gather-tests/solution/tests/: collision-detector-tests.cpp
sprint3/problems/ammo/: ammo.stpd  ammo.stpd_si.json  ammo.txt  load.yaml  load_stress.yaml
sprint3/problems/ammo/logs/2026-04-07_13-57-33.462828/: configinitial.yaml  phantom_WZtq0N.conf  validated_conf.yaml
sprint3/problems/ammo/logs/2026-04-07_14-00-42.666749/: configinitial.yaml  phantom_J4yoXl.conf  validated_conf.yaml
sprint3/problems/ammo/logs/2026-04-07_14-09-09.786119/: configinitial.yaml  phantom__9ILqk.conf  validated_conf.yaml
sprint3/problems/ammo/solution/: ammo.stpd  ammo.stpd_si.json  ammo.txt
sprint3/problems/find_return/solution/: CMakeLists.txt
sprint3/problems/find_return/solution/src/: collision_handler.cpp  collision_handler.h  game_types.cpp  game_types.h
sprint3/problems/flamegraph/solution/: shoot.py
sprint3/problems/gather-tests/solution/: CMakeLists.txt
sprint3/problems/gather/solution/: CMakeLists.txt
sprint3/problems/gen_objects/solution/: CMakeLists.txt
sprint3/problems/gen_objects/solution/src/: loot_generator.cpp  loot_generator.h  model.h
sprint3/problems/gen_objects/solution/tests/: loot_generator_tests.cpp
sprint3/problems/htmldecode/solution/: CMakeLists.txt
sprint3/problems/htmldecode/solution/src/: htmldecode.cpp  htmldecode.h
sprint3/problems/htmldecode/solution/tests/: catch_test_main.cpp
sprint3/problems/instrumentation/precode/: event2dot_v0  event2dot_v1  event2dot_v2  report
sprint3/problems/instrumentation/solution/: report
sprint3/problems/load/solution/: conanfile.txt
sprint3/problems/scores/solution/: CMakeLists.txt
sprint3/problems/scores/solution/src/: collision_handler.cpp  game_types.h
sprint3/problems/scores/solution/tests/: test.cpp
sprint3/problems/static_lib/solution/: CMakeLists.txt
sprint3/problems/static_lib/solution/src/: loot_generator.cpp  main.cpp  model.cpp  model.h
sprint3/problems/static_lib/solution/tests/: loot_generator_tests.cpp  model_tests.cpp  simple_tests.cpp
sprint3/problems/tv/solution/: CMakeLists.txt
sprint3/problems/tv/solution/src/: tv.cpp  tv.h
sprint3/problems/tv/solution/tests/: google_tv_tests.cpp
sprint3/problems/urldecode/solution/: CMakeLists.txt
sprint3/problems/urldecode/solution/src/: urldecode.cpp  urldecode.h
sprint3/problems/urldecode/solution/tests/: boost_test_main.cpp
sprint3/problems/urlencode/solution/: CMakeLists.txt
sprint3/problems/urlencode/solution/src/: urlencode.cpp  urlencode.h
sprint3/problems/urlencode/solution/tests/: gtest_main.cpp
sprint4/final_task/solution/: .gitignore  CMakeLists.txt  conanfile.txt
sprint4/final_task/solution/src/: database.cpp  database.hpp  database_interface.hpp  dog_manager.cpp  dog_manager.hpp  main.cpp  main_test.cpp  records_handler.cpp  records_handler.hpp  request_handler.cpp  request_handler.h
sprint4/final_task/solution/tests/: test_database.cpp  test_dog_manager.cpp
sprint4/problems/bookypedia-1/solution/: CMakeLists.txt
sprint4/problems/bookypedia-1/solution/include/domain/: models.hpp  repositories.hpp
sprint4/problems/bookypedia-1/solution/src/: main.cpp
sprint4/problems/bookypedia-1/solution/src/application/: use_cases.cpp  use_cases.hpp
sprint4/problems/bookypedia-1/solution/src/infrastructure/: database_manager.cpp  repositories.cpp  repositories.hpp
sprint4/problems/bookypedia-2/solution/: CMakeLists.txt  conanfile.txt
sprint4/problems/bookypedia-2/solution/include/domain/: models.hpp  repositories.hpp
sprint4/problems/bookypedia-2/solution/src/: main.cpp
sprint4/problems/bookypedia-2/solution/src/application/: bookypedia.cpp  bookypedia.hpp
sprint4/problems/bookypedia-2/solution/src/infrastructure/: database_manager.cpp  database_manager.hpp  (+4 more)
sprint4/problems/db_of_books/solution/: CMakeLists.txt
sprint4/problems/db_of_books/solution/src/: main.cpp
sprint4/problems/state_serialization/solution/: CMakeLists.txt  conanfile.txt
